// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<FormInput /> renders compact 1`] = `
<input
  className="f2wgql6"
  data-enable-grammarly="false"
  data-gramm="false"
  disabled={false}
  id="test"
  name="test"
  onChange={[Function]}
  required={true}
  value=""
/>
`;

exports[`<FormInput /> renders important 1`] = `
<input
  className="f1jap1ru"
  data-enable-grammarly="false"
  data-gramm="false"
  disabled={false}
  id="test"
  name="test"
  onChange={[Function]}
  required={true}
  value=""
/>
`;

exports[`<FormInput /> renders select compact 1`] = `
<select
  className="fvk29wc"
  data-enable-grammarly="false"
  data-gramm="false"
  disabled={false}
  id="test"
  name="test"
  onChange={[Function]}
  required={true}
  value=""
/>
`;

exports[`<FormInput /> sets hidden 1`] = `
<input
  className="f1lpdxqg"
  data-enable-grammarly="false"
  data-gramm="false"
  disabled={false}
  id="test"
  name="test"
  onChange={[Function]}
  required={true}
  value=""
/>
`;

exports[`<FormInput /> supports prefixes 1`] = `
<input
  className="f1auwdbx"
  data-enable-grammarly="false"
  data-gramm="false"
  disabled={false}
  id="test"
  name="test"
  onChange={[Function]}
  required={true}
  value=""
/>
`;

exports[`<FormInput /> supports suffixes 1`] = `
<input
  className="f1fhsrj1"
  data-enable-grammarly="false"
  data-gramm="false"
  disabled={false}
  id="test"
  name="test"
  onChange={[Function]}
  required={true}
  value=""
/>
`;
